--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: "Roboto", sans-serif;
+    font-family: "Pridi", sans-serif;
   }
   
   header{
@@ -10,6 +10,7 @@ body{
     padding: 20px;
     width: 100%;
     height: 30px;
+    margin-bottom: 10%;
   }
   
   .left_area h3{
@@ -114,16 +115,18 @@ body{
   
   #check:checked ~ .sidebar a{
     font-size: 20px;
-    margin-left: 170px;
+    margin-left: 160px;
     width: 80px;
   }
   
   .content{
-    margin-left: 250px;
+    width: 500px;
+    height: 500px;
+    margin: 0 0 30% 50%;
+    border: 1px solid black;
     background: white;
     background-position: center;
     background-size: cover;
-    height: 100vh;
     transition: 0.5s;
   }
 
